[Fix] 캐싱 적용후 기존 테스트 코드 및 기타 설정 수정